@startuml ClassDiagram

' Service
class GameStore
{
	- id: String
	- name: String

	- shelf_list : List<Shelf>
	- stock_product_list: List<StockProduct>
	- bought_list: List<ProductItem>

	- room_list: List<Room>

	- customer_list: List<Customer>
	- member_list: List<Member>
	- staff_list: List<Staff>

	- payment_gateway_list: List<PaymentGateway>

	- staff_logs_list: List<StaffLogs>
	- manager_logs_list: List<ManagerLogs>
	- customer_logs_list: List<CustomerLogs>
	- staff_logs_list: List<StaffLogs>
	- manager_logs_list: List<ManagerLogs>
	- customer_logs_list: List<CustomerLogs>

	- bill: List<Bill>

	+ make_reservation(customer: Customer, room: Room)
	+ create_customer(name: str)
	+ subscribe(customer: Customer)
	+ subscribe(customer: Customer)
	+ create_Logs()
	+ start_payment()
}

' Shelf
class Shelf
{
	- max_capacity: int
	- product_on_shelf: List<ProductItem>

	+ view_shelf()
	+ item_to_cart(item_id: str, cart: Cart)
	+ fill_product(product_item_list: List<ProductItem>)
}

' Product
class StockProduct
{
	- product: Product
	- product_item_list: List<ProductItem>
}

abstract class Product
{
	- id: String
	- name: String
}

class ProductItem
{
	- product: Product
	- serial_number: String
	- status: String
	' Waiting_For_Approval, Selling, For_Rental, Unavailable, Removed
	- sell_price: int
	- condition: String
	' New, Second_Hand, Refurbish
}

' Game
abstract class Game
{
	- id: String
	- name: String
	- description: String
	- genre: List<String>
	- supported_platform: List<String>

	+ play()
}

class GameDisc
{
	+ play()
}

class GameKeyCard
{
	+ play()
}

class GameCartridge
{
	+ play()
}

' Room
class Room
{
	- id: String
	- max_customer: int
	- serivce_price: int
	- room_type: RoomTypeEnum
	- customer_list: list[Customer]

	- status: String
	' Available, Reserved, Being-Use, Under-Maintainace

	- available_product: List<ProductItem>

	+ set_status(status: Enum)
	+ create_reservation(self, customer: Customer) -> Reservation
}

Enum RoomType
{
	- NORMAL
	- VIP
}

Enum RoomStatus
{
	- AVAILABLE
	- RESERVED
	- MAINTAINACE
	- IN_USE
}

' Reservation
class Reservation
{
	- id: String

	- customer: Customer
	- room: Room

	- status: String
	' Pending, Paid, Serivced, Cancel
	- time_start: Datetime
	- end_start: Datetime

	+ set_status(status: Enum)
}

' Machine
abstract class Machine
{
	- id: String
	- name: String

	+ run_game()
}

class PC
{
	- cpu: String
	- gpu: String
	- mem: int

	+ run_game()
}

class Playstation
{
	+ run_game()
}

class Switch
{
	+ run_game()
}

class GameBoy
{
	+ run_game()
}

' Role
class Customer
{
	- name: String
	- id: String

	- coupon_list: List<Coupon>
	- payment_gateway_list: List<PaymentGateway>

	- cart: Cart
	- reservation: Reservation
	- service_history: List<Logs>
	- bought_product: List<ProductItem>

	- bill: List<Bill>

	+ add_to_cart(productId: str)
	+ remove_from_cart(productId: str)

	+ buy_product()
	+ refund_product(productItem: ProductItem)

	+ reserve_room(roomId: str)
	+ check_in()
	+ check_out()
	+ apply_discount()
}

class Member
{
	- member_id: Str
	- member_expire_date: Datetime
	- member_discount: float
	' 5% or something

	+ unsubscribe()
	+ discount()
}

class Staff
{
	- id: String
	- name: String
	- age: int

	+ shelf_restock(shelf: Shelf, product: Product, amount: int)
	+ check_in()
	+ check_out()
}

class Manager
{
	+ create_game_disc()
	+ create_game_catridge()
	+ create_game_key_card()
	+ create_pc()
	+ create_switch()
	+ create_playstation()
	+ refill_stock()
	+ create_coupon()
}

' Cart
class Cart
{
	- owner: Customer
	- cart_item_list: list<CartItem>

	+ select_buy_item(product: ProductItem)
	+ add_item(product: ProductItem)
	+ remove_item(product: ProductItem)
}

class CartItem
{
	- is_buy: bool
	- productItem: ProductItem
}

class Coupon
{
	- minimum_spending: int
	- expire_date: Datetime
}

' Payment Method
abstract class PaymentGateway
{
	- id: String
	- status: String
	' Active/Expired/Blocked

	+ authenticate()
	+ pay()
}

class QrCode
{
	- bank_name: String
	- qr_ref: String
	
	+ authenticate()
	+ pay()
}

class Card
{
	- brand: String
	- token_ref: String

	+ authenticate()
	+ pay()
}

' Logs
abstract class Log
{
	- id: String
}

class CustomerLog
{
	- actor: Customer
	- action: CustomerLogAction
}

Enum CustomerLogAction
{
	- BUY
	- RENT
	- RESERVE
	- CANCEL_RESERVE
	- REFUND
	- CHECK_IN
	- CHECK_OUT
	- SUBSCRIBE
	- UNSUBSCRIBE
}

class StaffLog
{
	- actor: Staff
	- action: StaffLogAction
}

Enum StaffLogAction
{
	- CHECK_IN_CUSTOMER
	- CHECK_OUT_CUSTOMER
	- REFILL_SHELF
}

class ManagerLog
{
	- actor: Manager
	- action: ManagerLogAction
}

Enum ManagerLogAction
{
	- CREATE_GAME
	- CREATE_MACHINE
	- REFILL_STOCK
}

class Bill
{
	- id: String
	- timestamp: Datetime
	- payment_gateway: PaymentGateway
	- amount: float
	- coupon: Coupon
	- is_used_to_create_coupon: bool
}

class ProductBill
{
	- product_item_list: List<ProductItemList>
}

class RoomBill
{
	- reservation: Reservation
}

' Relation
GameStore "1" o-- "0..*" StockProduct
GameStore "1" o-- "0..*" Shelf
GameStore "1" o-- "1..*" Room
GameStore "1" o-- "0..*" Customer
GameStore "1" *-- "0..*" Member
GameStore "1" o-- "1..*" Staff
GameStore "1" o-- "1..*" PaymentGateway
GameStore "1" o-- "0..*" Log
GameStore "1" o-- "0..*" Bill

Shelf "0" o-- ProductItem

StockProduct --> Product
StockProduct o-- ProductItem

Product <|-- Game
Product <|-- Machine

ProductItem --> Product

Game <|-- GameDisc
Game <|-- GameKeyCard
Game <|-- GameCartridge

Room o-- Reservation
Room --> RoomStatus
Room --> RoomType
Room o-- ProductItem

Machine <|-- PC
Machine <|-- Switch
Machine <|-- GameBoy
Machine <|-- Playstation

Customer "0..*" *-- Coupon
Customer "1" <-> "1" Cart
Customer o-- Reservation
Customer o-- Bill
Customer <|-- Member

Staff <|-- Manager

Cart o-- CartItem

CartItem --> ProductItem

PaymentGateway <|-- QrCode
PaymentGateway <|-- Card

Log <|-- CustomerLog
Log <|-- StaffLog
Log <|-- ManagerLog

CustomerLog --> CustomerLogAction
StaffLog --> StaffLogAction
ManagerLog --> ManagerLogAction

StaffLogAction <|-- ManagerLogAction

Reservation --> Room

Bill --> PaymentGateway
Bill <|-- ProductBill
Bill <|-- RoomBill

RoomBill --> Reservation
ProductBill o-- ProductItem

@enduml